5일차 콘솔 입력 루프 및 양방향 통신 완성
- std::thread를 통해 사용자 입력을 받는 스레드와 데이터를 전달받아 콘솔에 출력하는 스레드로 나누어 양방향 통신 완성
- 전체적인 코드 주석 추가

Refs: #8

--- a/IRCChat/IRCChat.vcxproj
+++ b/IRCChat/IRCChat.vcxproj
@@ -132,6 +132,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="server.cpp" />
+    <ClCompile Include="serverlib.cpp" />
+    <ClInclude Include="serverlib.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\IRCCore\IRCCore.vcxproj">
