6일차 닉네임 시스템 구현
- 전송하려는 데이터의 접두에 NICK: JSG 형식으로 닉네임 정보를 보내 닉네임 시스템을 구현
- SocketOStream 클래스를 구현하여 데이터 전송과정을 추상화 및 사용을 용이하게 함
- IRCMessage 클래스를 활용하여 데이터를 파싱하고 각 필드별로 데이터를 저장하도록 함.
- CommandInfo 파일을 추가해 커맨드 관련 데이터를 받아오고 앞으로 커맨드 별 동작을 따로 관리할 수 있도록 구현
- 서버는 사용자 입력을 받지 않고 클라이언트로 부터 받은 데이터를 그대로 전송하도록 구현 (echo)
- std::atomic<bool>을 사용하여 각 쓰레드가 경쟁 문제를 발생시키지 않고 connect_state를 조작할 수 있도록 구현
- 프로젝트 Release 설정을 하여 빌드된 코드로 exe 파일을 생성하여 여러 클라이언트 프로그램을 실행시킬 수 있음
- 한글 깨짐 관련 인코딩 수정

Refs: #9 #10

--- a/IRCCore/IRCCore.vcxproj
+++ b/IRCCore/IRCCore.vcxproj
@@ -19,12 +19,18 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CommandInfo.cpp" />
+    <ClCompile Include="IRCMessage.cpp" />
     <ClCompile Include="loglib.cpp" />
     <ClCompile Include="serverinfo.h" />
+    <ClCompile Include="SocketOStream.cpp" />
     <ClCompile Include="socketutility.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CommandInfo.h" />
+    <ClInclude Include="IRCmessage.h" />
     <ClInclude Include="loglib.h" />
+    <ClInclude Include="SocketOStream.h" />
     <ClInclude Include="socketutility.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -55,7 +61,7 @@
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
